# lightweight-llm-test

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  rag_tools.py  requirements.txt
